@@ -1317,8 +1317,8 @@ class WC_Stripe_Webhook_Handler extends WC_Stripe_Payment_Gateway {
 		// Try to retrieve from the charges array.
 		if ( ! empty( $intent->charges ) ) {
 			$charge   = $intent->charges[0] ?? [];
-			$order_id = $charge['metadata']['order_id'] ?? null;
-			return wc_get_order( $order_id );
+			$order_id = $charge->metadata->order_id ?? null;
+			return $order_id ? wc_get_order( $order_id ) : false;
 		}
 
 		// Fall back to finding the order via the intent ID.
