@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 9.1.1 - xxxx-xx-xx =
+* Fix - Fixes the webhook order retrieval by intent charges. The processed event is an object, not an array.
 * Fix - Payment request button fails to display when the legacy checkout experience is enabled.
 * Fix - Resolves the payment element loading issue in the legacy checkout experience.
 
